--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="result-container container">
       <video class="gif-result" src="video/love_gif.mp4" autoplay loop muted playsinline controls></video>
-      <h2>I love You Lang🫶🥺</h2>
+      <h2>I love you maot🫶</h2>
     </div>
 
     <div class="cssload-main">
